# siyi-python-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  package.xml  siyi_sdk.py
include/: mainwindow.h
launch/: rtsp_camera.launch  siyi_ros_sdk.launch  yolov5.launch
scripts/: gimbal_angle_control.py  ml_object_tracker.py
src/: main_node.cpp  mainwindow.cpp  mainwindow.ui  rtsp_driver_node.cpp
