<?xml version="1.0"?>
<package format="2">
    <name>siyi_ros_sdk</name>
    <version>1.2.2</version>
    <description>
        SIYI ROS SDK for communication with A8 Mini camera
    </description>

    <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>

    <license>Apache</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>qt_build</depend>
    <depend>tf</depend>

    <export>
        <build_type>catkin</build_type>
    </export>
</package>
